betta-0.0.5.css
/* ... */
.dark form label {
  color: #ffffff;
}

.tooltip {
  display: inline-block;
  position: relative;
}

.tooltip > span.tooltip-text {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 2.75rem;
  left: -3rem;
  right: -3rem;
  height: auto;
  width: auto;
  padding: 0.25rem 0.5rem;
  border-radius: 0.75rem;
  text-align: center;
  font-size: 0.8rem;
  line-height: 1rem;
  z-index: 8;
  background-color: #121212;
  color: #eeeeee;
  transition-delay: 0s;
}

.dark .tooltip > span.tooltip-text {
  background-color: #f5f5f5;
  color: #424242;
}

.tooltip:hover > span.tooltip-text {
  visibility: visible;
  opacity: 1;
  transition: opacity 0.2s;
  transition-delay: 1s;
}

.tooltip > span.tooltip-text::after {
  content: " ";
  position: absolute;
  left: 50%;
  bottom: 100%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #121212 transparent;
}

.dark .tooltip > span.tooltip-text::after {
  border-color: transparent transparent #f5f5f5 transparent;
}

@media (max-width: 800px) {
  nav .tooltip > span.tooltip-text {
    visibility: visible;
    opacity: 1;
    top: 0;
    bottom: 0;
    left: 3rem;
    right: auto;
    padding: 0.5rem 0.5rem;
    text-align: left;
    font-size: 1rem;
    line-height: 1.6rem;
    background-color: #ffffff;
    color: #000000;
  }

  .dark nav .tooltip > span.tooltip-text {
    color: #f5f5f5;
    background-color: #121212;
  }

  nav .tooltip > span.tooltip-text::after {
    display: none;
  }

  nav.toolbar .tooltip > span.tooltip-text {
    visibility: hidden;
  }
}
.sidebar .tooltip > span.tooltip-text {
  top: 0.5rem;
  left: 3rem;
  right: -9rem;
}

.sidebar .tooltip > span.tooltip-text::after {
  display: none;
}

header {
  width: 100%;
  margin: 0 auto;
  padding-top: 3rem;
}

header.hero {
  text-align: center;
}

header.hero img {
  width: 100%;
  padding: 0 2rem;
}

header.hero > h1 {
  font-size: 6rem;
  padding-bottom: 7rem;
  font-style: italic;
  letter-spacing: 0.35rem;
  text-transform: uppercase;
  text-shadow: -2px -2px 2px rgba(0, 0, 0, 0.2);
}

@media (max-width: 800px) {
  header.hero > h1 {
    font-size: 4rem;
    letter-spacing: 0.15rem;
    line-height: 5rem;
  }
}
#loader {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: #f5f5f5;
  z-index: 101;
}

.dark #loader {
  background: #212121;
}

#loader.show {
  display: block;
}

#spinner {
  position: absolute;
  top: calc(50vh - 2.5rem);
  left: calc(50vw - 2.5rem);
  border: 2rem solid #e0e0e0;
  border-top: 1rem solid #e0e0e0;
  border-radius: 50%;
  width: 5rem;
  height: 5rem;
  animation: spin 2s linear infinite;
  background: #121212;
}

.dark #spinner {
  border-color: #616161;
  background: #121212;
}

/*# sourceMappingURL=betta-0.0.5.css.map */

